- fixed the e-mail sender and pointed it to use rdl@therdl.com - made the ideas module accessible to everyone - fixed emotion labels not showing when replying to a post

--- a/src/main/java/com/therdl/client/view/cssbundles/rdl.css
+++ b/src/main/java/com/therdl/client/view/cssbundles/rdl.css
@@ -57,6 +57,7 @@ div.text {
 	display: inline-block;
 	vertical-align: 1px;
 	margin-bottom: 2px;
+    z-index: 100;
 }
 
 .labels .label {
